--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <div class="icon solid fa-lightbulb fa-3x color-blue-3"></div>
                             <br />
                             <h3>Unique</h3>
-                            <span class="sub-descript">Taylored UX/UI and functionality.</span>
+                            <span class="sub-descript">Tailored UX/UI and functionality.</span>
                         </div>
                         <div class="col-3 icon-col-fix">
                             <div class="icon solid fa-database fa-3x color-blue-4"></div>
@@ -138,42 +138,22 @@
             </span>
         
             <span id="link-portfolio">
-                <div class="wrapper style1"><!-- Features -->
+                <div class="wrapper">
 
                     <section id="features" class="container special">
                         <header>
                             <h2>My Portfolio</h2>
                             <p>A collection of my works.</p>
                         </header>
-                        <div class="row">
+                        <div class="row auto-space">
                             <article class="col-4 col-12-mobile special">
                                 <a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
                                 <header>
-                                    <h3><a href="#">Gravida aliquam penatibus</a></h3>
+                                    <h3><a href="#">Novus.One</a></h3>
                                 </header>
                                 <p>
-                                    Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-                                    porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-                                </p>
-                            </article>
-                            <article class="col-4 col-12-mobile special">
-                                <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
-                                <header>
-                                    <h3><a href="#">Sed quis rhoncus placerat</a></h3>
-                                </header>
-                                <p>
-                                    Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-                                    porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-                                </p>
-                            </article>
-                            <article class="col-4 col-12-mobile special">
-                                <a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
-                                <header>
-                                    <h3><a href="#">Magna laoreet et aliquam</a></h3>
-                                </header>
-                                <p>
-                                    Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-                                    porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+                                    A social network built using the Laravel PHP Framework. This platform utilizes the following technologies: 
+                                    PHP, HTML5, CSS3, Bootstrap, jQuery, Javascript, VueJS, MySQL, AES-256-CBC, Ethereum Blockchain and multiple 3rd party API services.
                                 </p>
                             </article>
                         </div>
@@ -181,84 +161,50 @@
 
                 </div>
             
-                <section class="carousel"><!-- Carousel -->
+                <section class="carousel">
+                    <header class="text-center">
+                        <h2>Lambda School Projects</h2>
+                        <p>My Lambda Projects.</p>
+                    </header>
                     <div class="reel">
-                        <article>
+                        <article class="project-box">
+                            <a href="https://codepen.io/SevenPlusSix/pen/XWWegVV" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                            <header><h3><a href="#">User Interface I: HTML Markup</a></h3></header>
+                        </article>
+                        <article class="project-box">
+                            <a href="https://codepen.io/SevenPlusSix/pen/xxxXrpz" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                            <header><h3><a href="#">User Interface I:  Project 2</a></h3></header>
+                        </article>
+                        <article class="project-box">
                             <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                            <header>
-                                <h3><a href="#">Pulvinar sagittis congue</a></h3>
-                            </header>
-                            <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+                            <header><h3><a href="https://github.com/JasonNeale/Git-for-Web-Development-Project">Git for Web Development</a></h3></header>
                         </article>
-                        <article>
-                            <a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-                            <header>
-                                <h3><a href="#">Fermentum sagittis proin</a></h3>
-                            </header>
-                            <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-                        </article>
-                        <article>
-                            <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-                            <header>
-                                <h3><a href="#">Sed quis rhoncus placerat</a></h3>
-                            </header>
-                            <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-                        </article>
-                        <article>
-                            <a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-                            <header>
-                                <h3><a href="#">Ultrices urna sit lobortis</a></h3>
-                            </header>
-                            <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-                        </article>
-                        <article>
-                            <a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-                            <header>
-                                <h3><a href="#">Varius magnis sollicitudin</a></h3>
-                            </header>
-                            <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-                        </article>
-                        <article>
+                        <article class="project-box">
                             <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                            <header>
-                                <h3><a href="#">Pulvinar sagittis congue</a></h3>
-                            </header>
-                            <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+                            <header><h3><a href="https://github.com/JasonNeale/User-Interface">User Interface II</a></h3></header>
                         </article>
-                        <article>
-                            <a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-                            <header>
-                                <h3><a href="#">Fermentum sagittis proin</a></h3>
-                            </header>
-                            <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+                        <article class="project-box">
+                            <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                            <header><h3><a href="https://github.com/JasonNeale/UI-III-Flexbox">User Interface III</a></h3></header>
                         </article>
-                        <article>
-                            <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-                            <header>
-                                <h3><a href="#">Sed quis rhoncus placerat</a></h3>
-                            </header>
-                            <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+                        <article class="project-box">
+                            <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                            <header><h3><a href="https://github.com/JasonNeale/Sprint-Challenge--User-Interface">Sprint Challenge 1</a></h3></header>
                         </article>
-                        <article>
-                            <a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-                            <header>
-                                <h3><a href="#">Ultrices urna sit lobortis</a></h3>
-                            </header>
-                            <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+                        <article class="project-box">
+                            <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                            <header><h3><a href="https://github.com/JasonNeale/responsive-web-design-I">Responsive Design I</a></h3></header>
                         </article>
-                        <article>
-                            <a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-                            <header>
-                                <h3><a href="#">Varius magnis sollicitudin</a></h3>
-                            </header>
-                            <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+                        <article class="project-box">
+                            <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                            <header><h3><a href="https://github.com/JasonNeale/portfolio-website">Responsive Design II</a></h3></header>
                         </article>
                     </div>
                 </section>
             </span>
 
             <span id="link-contact">
-                <div id="footer"><!-- Footer -->
+                <div id="footer">
                     <div class="container">
                         <div class="row">
                             <section class="col-4 col-12-mobile">
@@ -284,16 +230,13 @@
                                     </div>
                                 </div>
                             </section>
-
                             <section class="col-4 col-12-mobile">
                                 <header>
                                     <h2>Contact Me</h2>
                                 </header>
                                 <form>
                                     <p><input placeholder="Your name..." type="text" /></p>
-
                                     <p><input placeholder="Your email..." type="email" /></p>
-
                                     <p><textarea placeholder="Your message..."></textarea></p>
                                     <div class="button-fix">
                                         <button>Send</button>
@@ -301,13 +244,12 @@
                                     </div>
                                 </form>
                             </section>
-
                             <section class="col-4 col-12-mobile"></section>
                         </div>
                         <hr />
                         <div class="row">
                             <div class="col-12">
-                                <section class="contact"><!-- Contact -->
+                                <section class="contact">
                                     <header>
                                         <h3>Find me elsewhere on the web...</h3>
                                     </header>
@@ -319,7 +261,7 @@
                                         <li><a href="https://medium.com/@jg13.1980" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
                                     </ul>
                                 </section>
-                                <div class="copyright"><!-- Copyright -->
+                                <div class="copyright">
                                     <ul class="menu">
                                         <li class="color-text-1">Jason Gromaski &copy; 2019</li>
                                     </ul>
@@ -331,7 +273,6 @@
             </span>
         </div>
 
-        <!-- Scripts -->
         <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/jquery.dropotron.min.js"></script>
         <script src="assets/js/jquery.scrolly.min.js"></script>
