--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
                         </header>
                         <div class="row auto-space">
                             <article class="col-4 col-12-mobile special">
-                                <a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+                                <a href="https://novus.one" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
                                 <header>
-                                    <h3><a href="#">Novus.One</a></h3>
+                                    <h3><a href="https://novus.one">Novus.One</a></h3>
                                 </header>
                                 <p>
                                     A social network built using the Laravel PHP Framework. This platform utilizes the following technologies: 
