updated files, index.html, index.css

--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
             <span id="link-home">
-                <div id="header"><!-- Header -->
-                    <div class="inner"><!-- Inner -->
+                <div id="header">
+                    <div class="inner">
                         <header>
                             <h1>Jason<br />Gromaski</h1>
                             <hr />
-                            <p>Full Stack Web Developer</p>
+                            <h2 class="color-text-1">Full Stack Web Developer</h2>
+                            <h3 class="color-text-1">Bay City, MI, United States</h3>
                         </header>
+                        <p><br /></p>
                         <footer>
-                            <a href="#banner" class="scrolly">MY SKILLS</a>
+                            <a href="#banner" class="scrolly link-button">VIEW MY SKILLS</a>
                         </footer>
                     </div>
-                    <nav id="nav"><!-- Nav -->
+                    <nav id="nav">
                         <ul>
                             <li><a href="#link-home">Home</a></li>
                             <li><a href="#link-about">About</a></li>
@@ -41,7 +43,7 @@
 
             <div class="container-after-landing">
                 <span id="link-about">
-                    <section id="banner"><!-- Banner -->
+                    <section id="banner">
                         <header>
                             <h2>Hello, I'm Jason.<br />I'm a full stack web developer.</h2>
                             <p>Developing amazing and beautiful, mobile ready responsive websites is what I do.</p>
@@ -85,7 +87,7 @@
                                 </p>
                             </div>
                             <div class="col-6">
-                                <h3>My Skills:</h3>
+                                <h2>My Skills:</h3>
                                 <div class="icon-col">
                                     <div class="icon-wrapper">
                                         <div class="icon brands fa-css3-alt fa-4x color-blue-4"></div>
@@ -148,9 +150,9 @@
                             </header>
                             <div class="row auto-space">
                                 <article class="col-4 col-12-mobile special">
-                                    <a href="https://novus.one" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+                                    <a target="_blank" href="https://novus.one" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
                                     <header>
-                                        <h3><a href="https://novus.one">Novus.One</a></h3>
+                                        <h3><a target="_blank" href="https://novus.one">Novus.One</a></h3>
                                     </header>
                                     <p>
                                         A social network built using the Laravel PHP Framework. This platform utilizes the following technologies: 
@@ -204,75 +206,79 @@
                     </section>
                 </span>
             </div>
-                <span id="link-contact">
-                    <div id="footer">
-                        <div class="container">
-                            <div class="row">
-                                <section class="col-4 col-12-mobile">
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <h3>Jason Gromaski</h3>
-                                            <br />
-                                            Email: jason@novus.one<br />
-                                            Phone: (989) 708-5157<br />
-                                            Location: Bay City, MI, US
-                                        </div>
+
+            <span id="link-contact">
+                <div id="footer">
+                    <div class="container">
+                        <div class="row">
+                            <section class="col-4 col-12-mobile">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <h3>Jason Gromaski</h3>
+                                        <br />
+                                        Email: <a target="_blank" href="mailto:jason@novus.one">jason@novus.one</a><br />
+                                        Phone: <a target="_blank" href="tel:+19897085157">(989) 708-5157</a><br />
+                                        Location: <a target="_blank" href="https://www.google.com/maps/place/Bay+City,+MI/@43.5812777,-83.9010874,14z/data=!3m1!4b1!4m5!3m4!1s0x8823e104be406d25:0x34d0a227f2ae3802!8m2!3d43.5944677!4d-83.8888647">Bay City, MI, US</a>
                                     </div>
-                                    <hr class="hr-fix" />
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <ul>
-                                                <li><a href="#link-home">Home</a></li>
-                                                <li><a href="#link-about">About</a></li>
-                                                <li><a href="#link-portfolio">Portfolio</a></li>
-                                                <li><a href="https://medium.com/@jg13.1980">Blog</a></li>
-                                                <li><a href="#link-contact">Contact</a></li>
-                                            </ul>
-                                        </div>
+                                </div>
+                                <hr class="hr-fix" />
+                                <div class="row">
+                                    <div class="col-12">
+                                        <ul>
+                                            <li><a href="#link-home">Home</a></li>
+                                            <li><a href="#link-about">About</a></li>
+                                            <li><a href="#link-portfolio">Portfolio</a></li>
+                                            <li><a href="https://medium.com/@jg13.1980">Blog</a></li>
+                                            <li><a href="#link-contact">Contact</a></li>
+                                        </ul>
                                     </div>
-                                </section>
-                                <section class="col-4 col-12-mobile">
+                                </div>
+                            </section>
+                            <section class="col-4 col-12-mobile">
+                                <header>
+                                    <h2>Contact Me</h2>
+                                </header>
+                                <form>
+                                    <p><input placeholder="Your name..." type="text" /></p>
+                                    <p><input placeholder="Your email..." type="email" /></p>
+                                    <p><textarea placeholder="Your message..."></textarea></p>
+                                    <div class="button-fix">
+                                        <button>Send</button>
+                                        <button>Reset</button>
+                                    </div>
+                                </form>
+                            </section>
+                            <section class="col-4 col-12-mobile">
+
+
+                            </section>
+                        </div>
+                        <hr />
+                        <div class="row">
+                            <div class="col-12">
+                                <section class="contact">
                                     <header>
-                                        <h2>Contact Me</h2>
+                                        <h3>Find me elsewhere on the web...</h3>
                                     </header>
-                                    <form>
-                                        <p><input placeholder="Your name..." type="text" /></p>
-                                        <p><input placeholder="Your email..." type="email" /></p>
-                                        <p><textarea placeholder="Your message..."></textarea></p>
-                                        <div class="button-fix">
-                                            <button>Send</button>
-                                            <button>Reset</button>
-                                        </div>
-                                    </form>
+                                    <p>Follow me on Twitter, Facebook, LinkedIn and Medium</p>
+                                    <ul class="icons">
+                                        <li><a target="_blank" href="https://twitter.com/SevenPlusSix" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                                        <li><a target="_blank" href="https://www.facebook.com/jason.neale.novus.one" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+                                        <li><a target="_blank" href="https://www.linkedin.com/in/jasonneale13/" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+                                        <li><a target="_blank" href="https://medium.com/@jg13.1980" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
+                                        <li><a target="_blank" href="https://github.com/JasonNeale" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                                    </ul>
                                 </section>
-                                <section class="col-4 col-12-mobile"></section>
-                            </div>
-                            <hr />
-                            <div class="row">
-                                <div class="col-12">
-                                    <section class="contact">
-                                        <header>
-                                            <h3>Find me elsewhere on the web...</h3>
-                                        </header>
-                                        <p>Follow me on Twitter, Facebook, LinkedIn and Medium</p>
-                                        <ul class="icons">
-                                            <li><a href="https://twitter.com/SevenPlusSix" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                                            <li><a href="https://www.facebook.com/jason.neale.novus.one" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                                            <li><a href="https://www.linkedin.com/in/jasonneale13/" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
-                                            <li><a href="https://medium.com/@jg13.1980" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
-                                        </ul>
-                                    </section>
-                                    <div class="copyright">
-                                        <ul class="menu">
-                                            <li class="color-text-1">Jason Gromaski &copy; 2019</li>
-                                        </ul>
-                                    </div>
+                                <div class="copyright">
+                                    <ul class="menu">
+                                        <li class="color-text-1">Jason Gromaski &copy; 2019</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </span>
-
+                </div>
+            </span>
         </div>
 
         <script src="assets/js/jquery.min.js"></script>
@@ -283,6 +289,5 @@
         <script src="assets/js/breakpoints.min.js"></script>
         <script src="assets/js/util.js"></script>
         <script src="assets/js/main.js"></script>
-
 	</body>
 </html>
