--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="assets/css/main.css" />
         <link rel="stylesheet" href="assets/css/my-styles.css" />
+        <link rel="stylesheet" href="assets/css/media.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="homepage is-preload">
@@ -49,7 +50,7 @@
                             <p>Developing amazing and beautiful, mobile ready responsive websites is what I do.</p>
                         </header>
 
-                        <div class="row m-t-40 auto-space">
+                        <div id="about-icons" class="row m-t-40 auto-space">
                             <div class="col-3 icon-col-fix">
                                 <div class="icon solid fa-tachometer-alt fa-3x color-blue-1"></div>
                                 <br />
@@ -76,7 +77,7 @@
                             </div>
                         </div>
 
-                        <div class="row m-t-60 auto-space">
+                        <div id="profile-pic-row" class="row m-t-60 auto-space">
                             <div class="col-6">
                                 <img class="round-img" src="images/profile-jason.png" />
                                 <h2>Who am I?</h2>
@@ -90,53 +91,70 @@
                                 <h2>My Skills:</h3>
                                 <div class="icon-col">
                                     <div class="icon-wrapper">
-                                        <div class="icon brands fa-css3-alt fa-4x color-blue-4"></div>
+                                        <div class="icon brands fa-css3 fa-4x color-blue-2"></div>
                                         <br />
                                         <h3>CSS3</h3>
                                     </div>
                                     <div class="icon-wrapper">
-                                        <div class="icon brands fa-html5 fa-4x color-blue-4"></div>
+                                        <div class="icon brands fa-html5 fa-4x color-blue-2"></div>
                                         <br />
                                         <h3>HTML5</h3>
                                     </div>
                                     <div class="icon-wrapper">
-                                        <div class="icon brands fa-react fa-4x color-blue-4"></div>
+                                        <div class="icon brands fa-react fa-4x color-blue-2"></div>
                                         <br />
                                         <h3>REACT</h3>
                                     </div>
                                     <div class="icon-wrapper">
-                                        <div class="icon brands fa-vuejs fa-4x color-blue-4"></div>
+                                        <div class="icon brands fa-vuejs fa-4x color-blue-2"></div>
                                         <br />
                                         <h3>VUEJS</h3>
                                     </div>
                                     <div class="icon-wrapper">
-                                        <div class="icon brands fa-js-square fa-4x color-blue-4"></div>
+                                        <div class="icon brands fa-js-square fa-4x color-blue-2"></div>
                                         <br />
                                         <h3>JAVASCRIPT</h3>
                                     </div>
                                     <div class="icon-wrapper">
-                                        <div class="icon brands fa-node-js fa-4x color-blue-4"></div>
+                                        <div class="icon brands fa-node-js fa-4x color-blue-2"></div>
                                         <br />
                                         <h3>NODE.JS</h3>
                                     </div>
                                     <div class="icon-wrapper">
-                                        <div class="icon brands fa-php fa-4x color-blue-4"></div>
+                                        <div class="icon brands fa-php fa-4x color-blue-2"></div>
                                         <br />
                                         <h3>PHP</h3>
                                     </div>
                                     <div class="icon-wrapper">
-                                        <div class="icon solid fa-code fa-4x color-blue-4"></div>
+                                        <div class="icon solid fa-code fa-4x color-blue-2"></div>
                                         <br />
                                         <h3>MYSQL</h3>
                                     </div>
                                     <div class="icon-wrapper">
-                                        <div class="icon brands fa-laravel fa-4x color-blue-4"></div>
+                                        <div class="icon brands fa-laravel fa-4x color-blue-2"></div>
                                         <br />
                                         <h3>LARAVEL</h3>
+                                    </div>
+                                    <div class="icon-wrapper">
+                                        <div class="icon brands fa-ethereum fa-4x color-blue-2"></div>
+                                        <br />
+                                        <h3>ETHEREUM</h3>
+                                    </div>
+                                    <div class="icon-wrapper">
+                                        <div class="icon solid fa-project-diagram fa-4x color-blue-2"></div>
+                                        <br />
+                                        <h3>BLOCKCHAIN</h3>
+                                    </div>
+                                    <div class="icon-wrapper">
+                                        <div class="icon solid fa-file-contract fa-4x color-blue-2"></div>
+                                        <br />
+                                        <h3>SMART CONTRACTS</h3>
                                     </div>
                                 </div>
                             </div>
                         </div>
+
+                        <h3 class="text-center">More Skills: <br />Web3.js, Solidity, SASS, LESS</h3>
                     </section>
                 </span>
             
@@ -157,6 +175,24 @@
                                     <p>
                                         A social network built using the Laravel PHP Framework. This platform utilizes the following technologies: 
                                         PHP, HTML5, CSS3, Bootstrap, jQuery, Javascript, VueJS, MySQL, AES-256-CBC, Ethereum Blockchain and multiple 3rd party API services.
+                                    </p>
+                                </article>
+                                <article class="col-4 col-12-mobile special">
+                                    <a target="_blank" href="javascript.void(0)" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+                                    <header>
+                                        <h3><a target="_blank" href="javascript.void(0)">NVS Token Smart Contract</a></h3>
+                                    </header>
+                                    <p>
+                                        Written in Solidity the NVS Token Smart Contract is an ERC-20 strict standard utility cryptocurrency token.
+                                    </p>
+                                </article>
+                                <article class="col-4 col-12-mobile special">
+                                    <a target="_blank" href="javascript.void(0)" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+                                    <header>
+                                        <h3><a target="_blank" href="javascript.void(0)">NVS Token Store Smart Contract</a></h3>
+                                    </header>
+                                    <p>
+                                        Written in Solidity the NVS Token Store Smart Contract is a smart contract used to communicate with the NVS Token Smart Contract to purchase tokens and send them to the buyers wallet.
                                     </p>
                                 </article>
                             </div>
@@ -214,7 +250,10 @@
                             <section class="col-4 col-12-mobile">
                                 <div class="row">
                                     <div class="col-12">
-                                        <h3>Jason Gromaski</h3>
+                                        <header class="text-center">
+                                            <h3>Jason Gromaski</h3>
+                                        </header>
+                                        
                                         <br />
                                         Email: <a target="_blank" href="mailto:jason@novus.one">jason@novus.one</a><br />
                                         Phone: <a target="_blank" href="tel:+19897085157">(989) 708-5157</a><br />
@@ -235,8 +274,8 @@
                                 </div>
                             </section>
                             <section class="col-4 col-12-mobile">
-                                <header>
-                                    <h2>Contact Me</h2>
+                                <header class="text-center">
+                                    <h3>Contact Me</h3>
                                 </header>
                                 <form>
                                     <p><input placeholder="Your name..." type="text" /></p>
@@ -249,8 +288,15 @@
                                 </form>
                             </section>
                             <section class="col-4 col-12-mobile">
-
-
+                                <header class="text-center">
+                                    <h3>Music Player</h3>
+                                </header>
+                                <iframe 
+                                allow="autoplay" 
+                                width="100%" 
+                                height="100%" 
+                                src="https://www.iheart.com/live/z-93-5475/?embed=true" 
+                                frameborder="0"></iframe>
                             </section>
                         </div>
                         <hr />
