updated files, index.html, index.css

--- a/index.html
+++ b/index.html
@@ -199,36 +199,36 @@
                         </header>
                         <div class="reel">
                             <article class="project-box">
-                                <a href="https://codepen.io/SevenPlusSix/pen/XWWegVV" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                                <header><h3><a href="#">User Interface I: HTML Markup</a></h3></header>
+                                <a target="_blank" href="https://codepen.io/SevenPlusSix/pen/XWWegVV" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                                <header><h3><a target="_blank" href="https://codepen.io/SevenPlusSix/pen/XWWegVV">User Interface I: HTML Markup</a></h3></header>
                             </article>
                             <article class="project-box">
-                                <a href="https://codepen.io/SevenPlusSix/pen/xxxXrpz" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                                <header><h3><a href="#">User Interface I:  Project 2</a></h3></header>
+                                <a target="_blank" href="https://codepen.io/SevenPlusSix/pen/xxxXrpz" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                                <header><h3><a target="_blank" href="https://codepen.io/SevenPlusSix/pen/xxxXrpz">User Interface I:  Project 2</a></h3></header>
                             </article>
                             <article class="project-box">
-                                <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                                <header><h3><a href="https://github.com/JasonNeale/Git-for-Web-Development-Project">Git for Web Development</a></h3></header>
+                                <a target="_blank" href="https://github.com/JasonNeale/Git-for-Web-Development-Project" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                                <header><h3><a target="_blank" href="https://github.com/JasonNeale/Git-for-Web-Development-Project">Git for Web Development</a></h3></header>
                             </article>
                             <article class="project-box">
-                                <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                                <header><h3><a href="https://github.com/JasonNeale/User-Interface">User Interface II</a></h3></header>
+                                <a target="_blank" href="https://github.com/JasonNeale/User-Interface" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                                <header><h3><a target="_blank" href="https://github.com/JasonNeale/User-Interface">User Interface II</a></h3></header>
                             </article>
                             <article class="project-box">
-                                <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                                <header><h3><a href="https://github.com/JasonNeale/UI-III-Flexbox">User Interface III</a></h3></header>
+                                <a target="_blank" href="https://github.com/JasonNeale/UI-III-Flexbox" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                                <header><h3><a target="_blank" href="https://github.com/JasonNeale/UI-III-Flexbox">User Interface III</a></h3></header>
                             </article>
                             <article class="project-box">
-                                <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                                <header><h3><a href="https://github.com/JasonNeale/Sprint-Challenge--User-Interface">Sprint Challenge 1</a></h3></header>
+                                <a target="_blank" href="https://github.com/JasonNeale/Sprint-Challenge--User-Interfac" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                                <header><h3><a target="_blank" href="https://github.com/JasonNeale/Sprint-Challenge--User-Interface">Sprint Challenge 1</a></h3></header>
                             </article>
                             <article class="project-box">
-                                <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                                <header><h3><a href="https://github.com/JasonNeale/responsive-web-design-I">Responsive Design I</a></h3></header>
+                                <a target="_blank" href="https://github.com/JasonNeale/responsive-web-design-I" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                                <header><h3><a target="_blank" href="https://github.com/JasonNeale/responsive-web-design-I">Responsive Design I</a></h3></header>
                             </article>
                             <article class="project-box">
-                                <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                                <header><h3><a href="https://github.com/JasonNeale/portfolio-website">Responsive Design II</a></h3></header>
+                                <a target="_blank" href="https://github.com/JasonNeale/portfolio-website" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                                <header><h3><a target="_blank" href="https://github.com/JasonNeale/portfolio-website">Responsive Design II</a></h3></header>
                             </article>
                         </div>
                     </section>
